# agentqt

./: .gitignore  AGENT_BOOT.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: prompt-evaluator.md  pyqt-code-reviewer.md
.claude/commands/: doc-check.md  fix-issue.md  new-feature.md  refactor.md  resume.md  review.md  rn.md  write-tests.md
.claude/hooks/: embed_devlog.py  embed_docs.py  review_reminder.py
.claude/rag/: .gitignore  docs_embed_new.py  docs_ingest.py  docs_query.py  embed_new.py  ingest.py  query.py  requirements.txt  resume_context.py
.claude/rules/: artifact-conventions.md  code-style.md  logging.md
.claude/skills/: code-writer.md  trace.md  workspace.md
agentqt_templates/: COMPARE.md
agentqt_templates/option_a/: README.md
agentqt_templates/option_c/: README.md
alm/: main_window.py  parser.py
installer/installer_output/: setup.iss  updater_manifest.json
us_swing/: CONTEXT.md  DEVLOG.md  TODO.md  USSwing.spec  usswing_installer.yaml
us_swing/.skeleton_cache/: skeleton.json
us_swing/docs/audit/: CODE_AUDIT_2026-06-13.md
us_swing/docs/execution/: ARCHITECTURE_FLOW.md  Broker_fix.md  DD.md  FO.md  Final_Execution.md  MD.md  SRD.md  STRATEGY_DESIGN.md  TODO_EXE_001_002.md  TRACE.md  TRADER_USE_CASES.md  UTCD.md  cleanup.md
us_swing/docs/gui/: DD.md  FO.md  MD.md  SRD.md  TRACE.md  UTCD.md
us_swing/docs/infrastructure/: DD.md  FO.md  MD.md  SRD.md  TRACE.md  UTCD.md
us_swing/docs/screener/: DD.md  MD.md  (+1 more)
us_swing/scripts/: _smoke_trade_cycle.py
us_swing/src/: update_dialog.py  updater_stub.py
(+189 files in other folders)
