[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usswing"
version = "0.1.0"
description = "US Stock Swing Trading Toolkit"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "lxml>=4.9",
    "pyarrow>=14.0",
    "yfinance>=0.2.30",
    "mcp>=1.0.0",
    "PyQt6>=6.5",
    "PyQt6-WebEngine>=6.5",
    "sqlalchemy>=2.0",
    # IBKR API. 0.9.86 is ib_insync's final release — pin it and its `eventkit`
    # transitive (source of the socket `disconnected` signal) for reproducibility.
    # NOTE: a disconnect-handler arg mismatch is patched at runtime in
    # ib_insync/client.py (`_onSocketDisconnected(msg='')`); the durable fix is
    # migrating to the maintained `ib_async` fork.
    "ib_insync==0.9.86",
    "eventkit==1.0.3",
    "apscheduler>=3.10",
    "keyring>=24.0",
    "openai>=1.40",
    "ta-lib>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.2",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs",
]

[tool.hatch.build.targets.wheel]
packages = ["us_swing/src/usswing"]

[tool.pytest.ini_options]
testpaths = ["us_swing/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.mypy]
strict = true
python_version = "3.11"
